fix padding issue on mobile for work items

--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -10,6 +10,7 @@
     align-items: center;
     list-style: none;
     margin: 0;
+    padding: 0;
 }
 
 .work-item {
